[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/ModifySetScene.gd" type="Script" id=1]
[ext_resource path="res://Font/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Theme/original_modify_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="AnimatedTexture" id=2]

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 2 )

[node name="ModifySetScene" type="Node2D"]
script = ExtResource( 1 )

[node name="ScreenMarginCont" type="MarginContainer" parent="."]
margin_right = 480.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_constants/margin_right = 20
custom_constants/margin_top = 125
custom_constants/margin_left = 20
custom_constants/margin_bottom = 125
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ScreenMarginCont"]
margin_left = 20.0
margin_top = 125.0
margin_right = 460.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelMarCont" type="MarginContainer" parent="ScreenMarginCont/Panel"]
margin_right = 440.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 9
custom_constants/margin_left = 25
custom_constants/margin_bottom = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentVBox" type="VBoxContainer" parent="ScreenMarginCont/Panel/PanelMarCont"]
margin_left = 25.0
margin_top = 9.0
margin_right = 415.0
margin_bottom = 461.0

[node name="FormTitle" type="RichTextLabel" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox"]
margin_right = 390.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Modify Set"
meta_underlined = false
text = "Modify Set"
scroll_active = false

[node name="DetailsAddSplitter" type="HBoxContainer" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox"]
margin_top = 52.0
margin_right = 390.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="AddItemLineEdit" type="LineEdit" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter"]
margin_right = 311.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
max_length = 25
right_icon = SubResource( 2 )
placeholder_text = "(Item name)"

[node name="VSeparator2" type="VSeparator" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter"]
margin_left = 315.0
margin_right = 319.0
margin_bottom = 32.0

[node name="AddItemButton" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter"]
margin_left = 323.0
margin_right = 353.0
margin_bottom = 32.0
hint_tooltip = "Add item."
text = " + "

[node name="SaveItemButton" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter"]
visible = false
margin_left = 251.0
margin_right = 347.0
margin_bottom = 33.0
hint_tooltip = "Save item name edit."
text = "Save Edit"

[node name="DeselectItemButton" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter"]
visible = false
margin_left = 181.0
margin_right = 347.0
margin_bottom = 33.0
hint_tooltip = "Deselect item."
size_flags_horizontal = 3
text = "Deselect"

[node name="RemoveItemButton2" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter"]
margin_left = 357.0
margin_right = 382.0
margin_bottom = 32.0
hint_tooltip = "Remove item."
text = " - "

[node name="VSeparator3" type="VSeparator" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter"]
margin_left = 386.0
margin_right = 390.0
margin_bottom = 32.0

[node name="HSeparator" type="HSeparator" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox"]
margin_top = 88.0
margin_right = 390.0
margin_bottom = 92.0

[node name="ItemsVBox" type="VBoxContainer" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox"]
visible = false
margin_top = 256.0
margin_right = 550.0
margin_bottom = 746.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="ItemList" type="ItemList" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox"]
margin_top = 96.0
margin_right = 390.0
margin_bottom = 420.0
size_flags_vertical = 3

[node name="EditTimeHBox" type="HBoxContainer" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox"]
visible = false
margin_top = 395.0
margin_right = 390.0
margin_bottom = 423.0

[node name="VSeparator" type="VSeparator" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/EditTimeHBox"]
margin_right = 134.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="EditTimeTextLabel" type="RichTextLabel" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/EditTimeHBox"]
margin_left = 138.0
margin_right = 272.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Time Value:"

[node name="TimeValLineEdit" type="LineEdit" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/EditTimeHBox"]
margin_left = 276.0
margin_right = 334.0
margin_bottom = 28.0
text = "0"
max_length = 4

[node name="AddTimeValButton" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/EditTimeHBox"]
margin_left = 338.0
margin_right = 363.0
margin_bottom = 28.0
text = "+"

[node name="SubTimeValButton" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/EditTimeHBox"]
margin_left = 367.0
margin_right = 390.0
margin_bottom = 28.0
text = "-"

[node name="FormProcessButtonsCont" type="HBoxContainer" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox"]
margin_top = 424.0
margin_right = 390.0
margin_bottom = 452.0

[node name="ConfirmButton" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont"]
margin_right = 76.0
margin_bottom = 28.0
text = "Confirm"

[node name="VSeparator" type="VSeparator" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont"]
margin_left = 80.0
margin_right = 111.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="EditTimeButton" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont"]
margin_left = 115.0
margin_right = 201.0
margin_bottom = 28.0
text = "Edit Time"

[node name="VSeparator2" type="VSeparator" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont"]
margin_left = 205.0
margin_right = 236.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="SortButton" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont"]
margin_left = 240.0
margin_right = 285.0
margin_bottom = 28.0
text = "Sort"

[node name="SortingPopupMenu" type="PopupMenu" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont/SortButton"]
margin_right = 20.0
margin_bottom = 20.0

[node name="VSeparator3" type="VSeparator" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont"]
margin_left = 289.0
margin_right = 320.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont"]
margin_left = 324.0
margin_right = 390.0
margin_bottom = 28.0
text = "Cancel"

[node name="DeleteMarginContainer" type="MarginContainer" parent="."]
margin_top = 600.0
margin_right = 480.0
margin_bottom = 720.0
custom_constants/margin_right = 156
custom_constants/margin_top = 32
custom_constants/margin_left = 156
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteSetButton" type="Button" parent="DeleteMarginContainer"]
margin_left = 156.0
margin_top = 32.0
margin_right = 263.0
margin_bottom = 65.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Delete Set"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="DeleteMarginContainer"]
visible = true
margin_left = 156.0
margin_top = 32.0
margin_right = 356.0
margin_bottom = 102.0
hint_tooltip = "This "
popup_exclusive = true
window_title = "Are you sure?"

[connection signal="text_changed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter/AddItemLineEdit" to="." method="_on_AddItemLineEdit_text_changed"]
[connection signal="text_entered" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter/AddItemLineEdit" to="." method="_on_AddItemLineEdit_text_entered"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter/AddItemButton" to="." method="_on_AddItemButton_pressed"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter/SaveItemButton" to="." method="_on_SaveItemButton_pressed"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter/DeselectItemButton" to="." method="_on_DeselectItemButton_pressed"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/DetailsAddSplitter/RemoveItemButton2" to="." method="_on_RemoveItemButton2_pressed"]
[connection signal="item_selected" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="text_changed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/EditTimeHBox/TimeValLineEdit" to="." method="_on_TimeValLineEdit_text_changed"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/EditTimeHBox/AddTimeValButton" to="." method="_on_AddTimeValButton_pressed"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/EditTimeHBox/SubTimeValButton" to="." method="_on_SubTimeValButton_pressed"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont/EditTimeButton" to="." method="_on_EditTimeButton_pressed"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont/SortButton" to="." method="_on_SortButton_pressed"]
[connection signal="id_pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont/SortButton/SortingPopupMenu" to="." method="_on_SortingPopupMenu_id_pressed"]
[connection signal="pressed" from="ScreenMarginCont/Panel/PanelMarCont/ContentVBox/FormProcessButtonsCont/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="DeleteMarginContainer/DeleteSetButton" to="." method="_on_DeleteSetButton_pressed"]
